fixed width problem on mobile device

--- a/css/base.css
+++ b/css/base.css
@@ -2,19 +2,13 @@
 
 body {
 	font-family: "Nunito", sans-serif;
-
-	font-size: 30px;
-	padding: 5rem;
 	padding-top: 0;
 	background: var(--background);
 	color: var(--foreground);
-
+	height: 100vh;
 }
 
 .wrapper {
 	max-width: 100%;
 	margin: 0 auto;
-	height: 100%;
-
-
 }
